// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly filter events 1`] = `
Array [
  Object {
    "className": "VERSION",
    "date": 2016-10-26T10:17:29.000Z,
    "name": "6.4",
  },
  Object {
    "className": "VERSION",
    "date": 2016-10-27T14:33:50.000Z,
    "name": "6.5-SNAPSHOT",
  },
]
`;

exports[`should correctly filter events 2`] = `
Array [
  Object {
    "className": "OTHER",
    "date": 2016-10-26T10:17:29.000Z,
    "name": "foo",
  },
]
`;

exports[`should correctly render a graph 1`] = `
<div
  className="project-activity-graph-container"
>
  <StaticGraphsLegend
    series={
      Array [
        Object {
          "data": Array [
            Object {
              "x": 2016-10-27T14:33:50.000Z,
              "y": 5,
            },
            Object {
              "x": 2016-10-27T10:21:15.000Z,
              "y": 16,
            },
            Object {
              "x": 2016-10-26T10:17:29.000Z,
              "y": 12,
            },
          ],
          "name": "bugs",
          "style": 0,
          "translatedName": "metric.bugs.name",
        },
      ]
    }
  />
  <div
    className="project-activity-graph"
  >
    <AutoSizer
      onResize={[Function]}
    />
  </div>
</div>
`;

exports[`should show a loading view 1`] = `
<div
  className="project-activity-graph-container"
>
  <div
    className="text-center"
  >
    <i
      className="spinner"
    />
  </div>
</div>
`;

exports[`should show that there is no data 1`] = `
<div
  className="project-activity-graph-container"
>
  <div
    className="note text-center"
  >
    component_measures.no_history
  </div>
</div>
`;
